experimental/ir/testdata/builtins/vendored_no_range_options.proto.yaml.stderr.txt
error: cannot resolve option setting
  --> test.proto:5:26
   |
 5 |   extensions 100 to 200 [verification = DECLARATION];
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  ::: google/protobuf/descriptor.proto:1:1
   |
 1 | syntax = "proto2";
   | ------------------ resolved against this descriptor.proto
   |
   = help: `google.protobuf.DescriptorProto.ExtensionRange.options` is not
           declared by this descriptor.proto; use a newer descriptor.proto or
           remove this option

encountered 1 error
